--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.12.0",
     "dayjs": "^1.11.18",
     "leaflet": "^1.9.4",
     "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
-    "supercluster": "^8.0.1"
+    "supercluster": "^8.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
