--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.12.0",
+    "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
