--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "^15.5.2",
