--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "supercluster": "^8.0.1",
     "uuid": "^13.0.0"
   },
