--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -33,6 +36,7 @@
     "@types/supercluster": "^7.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "prettier": "^3.2.5",
     "tailwindcss": "^4",
     "typescript": "5.9.2"
   }
